--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
